force-app/main/default/objects/Admit_Card__c/Admit_Card__c.object-meta.xml
<CustomObject>
    <label>Admit Card</label>
    <nameField>
        <displayFormat>SSMS-{0000000}</displayFormat>
        <label>Admit Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admit Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>