force-app/main/default/objects/Admit_Card__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <formula>StudentID__r.semester__c</formula>
    <label>Semester</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>