force-app/main/default/objects/Admit_Card__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula>StudentID__r.Student_Name__c</formula>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>