force-app/main/default/objects/Admit_Card__c/fields/StudentID__c.field-meta.xml
<CustomField>
    <fullName>StudentID__c</fullName>
    <label>Student ID</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Admit Cards</relationshipLabel>
    <relationshipName>Admit_Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>