force-app/main/default/objects/Admit_Card__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <formula>IF(INCLUDES(  StudentID__r.Subjects__c  , &quot;ACA&quot;), &quot;ACA&quot;, NULL)  + BR() +
IF(INCLUDES(  StudentID__r.Subjects__c  , &quot;TOC&quot;), &quot;TOC&quot;, NULL) + BR() +
IF(INCLUDES(  StudentID__r.Subjects__c  , &quot;CN&quot;), &quot;CN&quot;, NULL) + BR() +
IF(INCLUDES(  StudentID__r.Subjects__c  , &quot;BE&quot;), &quot;BE&quot;, NULL) + BR() +
IF(INCLUDES(  StudentID__r.Subjects__c  , &quot;BME&quot;), &quot;BME&quot;, NULL) + BR() +
IF(INCLUDES(  StudentID__r.Subjects__c  , &quot;JAVA&quot;), &quot;JAVA&quot;, NULL) + BR() +
IF(INCLUDES(  StudentID__r.Subjects__c  , &quot;OOPS&quot;), &quot;OOPS&quot;, NULL)</formula>
    <label>Subjects</label>
    <type>Text</type>
</CustomField>